@@ -8,11 +8,12 @@
 
 Pod::Spec.new do |s|
   s.name             = "LzmaSDK-ObjC"
-  s.version          = "2.0.8"
+  s.version          = "2.0.9"
   s.summary          = "Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code"
   s.description      = <<-DESC
 It's not yet another wrapper around C part of the LZMA SDK with all it's limitations.
-Based on C++ LZMA SDK version 16.02 (1602 - latest for now) and patched for iOS & MacOS platforms.
+Based on C++ LZMA SDK version 16.03 (1603 - latest for now) and patched for iOS & MacOS platforms.
+Can be used with Swift and Objective-C.
 The main advantages is:
 - List, extract 7z files (Lzma & Lzma2 compression method).
 - List, extract encrypted (password protected) 7z files (Lzma & Lzma2 compression method).
