@@ -6,14 +6,14 @@
 
 
 It's not yet another wrapper around C part of the [LZMA SDK] with all it's limitations.   
-Based on C++ [LZMA SDK] version 16.02 (1602 - latest for now) and patched for iOS & Mac OS platforms.   
+Based on C++ [LZMA SDK] version 16.03 (1603 - latest for now) and patched for iOS & Mac OS platforms.   
 Can be used with Swift and Objective-C.
 
 
 ### Description
 ----------------
 It's not yet another wrapper around C part of the [LZMA SDK] with all it's limitations. 
-Based on C++ [LZMA SDK] version 16.02 (1602 - latest for now) and patched for iOS & Mac OS platforms.
+Based on C++ [LZMA SDK] version 16.03 (1603 - latest for now) and patched for iOS & Mac OS platforms.
 
 The main advantages is:
 - List, extract **7z** files (**Lzma** & **Lzma2** *compression method*).
