@@ -1,9 +1,12 @@
 Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
 
-Changes on version 2.0.8 (current):
+Changes on version 2.0.9 (current):
+- Update C++ source to version 16.03 (1603 - latest for now).
+
+Changes on version 2.0.8:
 - Fix Cocoapod script.
 
-Changes on version 2.0.5 (current):
+Changes on version 2.0.5:
 - Remove unused code.
 - Disable Unicode, used UTF8 instead.
 
